# Kindle-Dashboard-Server

./: .dockerignore  .env_example  .gitignore  Dockerfile  README-en.md  README.md  app.py  config.py  data_services.py  demo_shot.avif  main.py  pyproject.toml  renderer.py  test_render.py
.github/workflows/: docker-publish.yml
templates/: dashboard.html
